option optimize_for = LITE_RUNTIME;
package protbuf;

import public "user.proto";
import public "group.proto";
import public "package.proto";
import public "parameters.proto";
import public "common.proto";

message ItemParameters{
  required uint32 id = 1;
  required bytes value = 2; 
  //value contains a QVariant of actual value e.g. 
  // Voltage (id of Voltage parameter is saved in id field) = 400 (QVariant->int)
}
message ItemBasicInfo{
  required uint32 id = 1;
  optional string name = 2;
  optional string symbol = 3;
}

message ItemDetails{
  optional string description = 2;
  required string name_space = 5;
  required bool private_item = 6;
  optional uint32 package_id = 8;
  optional uint32 user_id = 9;
  optional uint32 group_id = 10;
  
  repeated ItemParameters parameters = 7;
}

message ItemFullData{
    required ItemBasicInfo basic = 1;
    required ItemDetails details = 2;
//     optional ItemStatistics stats = 3;
//     optional PermissionsInfo permission = 4;
}
   